--- a/ansible/roles/namespaces/tasks/deploy.yml
+++ b/ansible/roles/namespaces/tasks/deploy.yml
@@ -23,26 +23,45 @@
     dest: "{{ kubernetes.root.path }}/{{ namespace }}/developer-role.yaml"
 
 - name: create namespace {{namespace}}
-  shell: |
-    kubectl get ns {{ namespace }} || kubectl create ns {{ namespace }}
+  kubernetes:
+    state:     present
+    name:      "{{ namespace }}"
+    resource:  namespace
 
-- name: add private dockerhub credentials to namespace {{ namespace }}
-  shell: |
-    DOCKER_INFO=$(gsutil cat gs://{{ bucket }}/hub.docker.com/docker-config.tsv)
-    DOCKER_USER=$(echo ${DOCKER_INFO} | awk '{print $1}' | tr -cd '[:print:]')
-    DOCKER_PASSWORD=$(echo ${DOCKER_INFO} | awk '{print $2}' | tr -cd '[:print:]')
-    DOCKER_EMAIL=$(echo ${DOCKER_INFO} | awk '{print $3}' | tr -cd '[:print:]')
-    kubectl get secret docker-hub-private-registry --namespace {{namespace}} || \
-    kubectl create secret docker-registry docker-hub-private-registry \
-      --docker-server=https://index.docker.io/v1/ \
-      --docker-username=${DOCKER_USER} \
-      --docker-password=${DOCKER_PASSWORD} \
-      --docker-email=${DOCKER_EMAIL} \
-      --namespace {{ namespace }}
+- name: create admin role for namespace {{namespace}}
+  kubernetes:
+    state:     present
+    name:      "{{ rbac_namespace }}:admin"
+    resource:  role
+    namespace: "{{ namespace }}"
+    manifest:  "{{ kubernetes.root.path }}/{{ namespace }}/admin-role.yaml"
 
-- name: add admin and developer role to namespaces {{ namespace }}
+- name: create developer role for namespace {{namespace}}
+  kubernetes:
+    state:     present
+    name:      "{{ rbac_namespace }}:developer"
+    resource:  role
+    namespace: "{{ namespace }}"
+    manifest:  "{{ kubernetes.root.path }}/{{ namespace }}/developer-role.yaml"
+
+- name: obtain private dockerhub credentials
   shell: |
-    kubectl get role "{{ rbac_namespace }}:admin" --namespace {{ namespace }} || \
-      kubectl create -n {{namespace}} -f "{{ kubernetes.root.path }}/{{ namespace }}/admin-role.yaml"
-    kubectl get role "{{ rbac_namespace }}:developer" --namespace {{ namespace }} || \
-      kubectl create -n {{ namespace }} -f "{{ kubernetes.root.path }}/{{ namespace }}/developer-role.yaml"
+    gsutil cat gs://{{ bucket }}/hub.docker.com/docker-config.json
+  register: dockerhub_credentials
+
+- name: parse dockerhub credentials
+  set_fact:
+    credentials: "{{ dockerhub_credentials.stdout | from_json }}"
+
+- name: dockerhub credentials for namespace {{ namespace }}
+  kubernetes:
+    state:     present
+    name:      docker-hub-private-registry
+    resource:  secret
+    type:      docker-registry
+    namespace: "{{ namespace }}"
+    options: >
+      --docker-server={{ credentials.url }} \
+      --docker-username={{ credentials.username }} \
+      --docker-password={{ credentials.password }} \
+      --docker-email={{ credentials.email }}
