--- a/ansible/roles/rbac/tasks/deploy.yml
+++ b/ansible/roles/rbac/tasks/deploy.yml
@@ -1,7 +1,10 @@
 ---
 
 - name: Promote self to kubernetes cluster admin
-  shell: >
-    kubectl get clusterrolebinding "{{ rbac_namespace }}:{{ gcloud_username.stdout }}-cluster-admin-binding" || \
-    kubectl create clusterrolebinding "{{ rbac_namespace }}:{{ gcloud_username.stdout }}-cluster-admin-binding" \
-            --clusterrole=cluster-admin --user="{{ gcloud_account.stdout }}"
+  kubernetes:
+    state:     present
+    name:      "{{ rbac_namespace }}:{{ gcloud_username.stdout }}-cluster-admin-binding"
+    resource:  clusterrolebinding
+    options: >
+      --clusterrole=cluster-admin \
+      --user="{{ gcloud_account.stdout }}"
