[ansible] add ansible which module

--- a/ansible/roles/helm/tasks/deploy.yml
+++ b/ansible/roles/helm/tasks/deploy.yml
@@ -1,8 +1,8 @@
 ---
 
-- name: Install helm-cli
-  shell: >
-    which helm || brew install kubernetes-helm
+- name: helm cli package status
+  package:
+    name: kubernetes-helm
 
 - name: Create helm service account
   kubernetes:
