--- a/ansible/roles/namespaces/tasks/deploy.yml
+++ b/ansible/roles/namespaces/tasks/deploy.yml
@@ -44,14 +44,26 @@
     namespace: "{{ namespace }}"
     manifest:  "{{ kubernetes.root.path }}/{{ namespace }}/developer-role.yaml"
 
+- name: dockerhub credentials for namespace {{ namespace }} status
+  kubernetes:
+    state:     status
+    name:      docker-hub-private-registry
+    resource:  secret
+    type:      docker-registry
+    namespace: "{{ namespace }}"
+  register: dockerub_secret_status
+
+
 - name: obtain private dockerhub credentials
   shell: |
     gsutil cat gs://{{ bucket }}/hub.docker.com/docker-config.json
   register: dockerhub_credentials
-
+  when: dockerub_secret_status.meta.present == false
+  
 - name: parse dockerhub credentials
   set_fact:
     credentials: "{{ dockerhub_credentials.stdout | from_json }}"
+  when: dockerub_secret_status.meta.present == false
 
 - name: dockerhub credentials for namespace {{ namespace }}
   kubernetes:
@@ -65,3 +77,4 @@
       --docker-username={{ credentials.username }} \
       --docker-password={{ credentials.password }} \
       --docker-email={{ credentials.email }}
+  when: dockerub_secret_status.meta.present == false
