--- a/ansible/roles/konfd/tasks/deploy.yml
+++ b/ansible/roles/konfd/tasks/deploy.yml
@@ -19,4 +19,4 @@
     manifest:  "{{ kubernetes.root.path }}/kube-system/konfd-deployment.yml"
   register: konfd_deployment
 
-- debug: var=konfd_deployment.meta.stdout
+- debug: var=konfd_deployment.stdout
