--- a/ansible/roles/namespaces/tasks/deploy.yml
+++ b/ansible/roles/namespaces/tasks/deploy.yml
@@ -53,17 +53,16 @@
     namespace: "{{ namespace }}"
   register: dockerub_secret_status
 
-
 - name: obtain private dockerhub credentials
   shell: |
     gsutil cat gs://{{ bucket }}/hub.docker.com/docker-config.json
   register: dockerhub_credentials
-  when: dockerub_secret_status.meta.present == false
-  
+  when: dockerub_secret_status.present == false
+
 - name: parse dockerhub credentials
   set_fact:
     credentials: "{{ dockerhub_credentials.stdout | from_json }}"
-  when: dockerub_secret_status.meta.present == false
+  when: dockerub_secret_status.present == false
 
 - name: dockerhub credentials for namespace {{ namespace }}
   kubernetes:
@@ -77,4 +76,4 @@
       --docker-username={{ credentials.username }} \
       --docker-password={{ credentials.password }} \
       --docker-email={{ credentials.email }}
-  when: dockerub_secret_status.meta.present == false
+  when: dockerub_secret_status.present == false
