--- a/catalog/elk/docker/elasticsearch/Dockerfile
+++ b/catalog/elk/docker/elasticsearch/Dockerfile
@@ -47,6 +47,7 @@ ENV NODE_DATA true
 ENV NODE_INGEST true
 ENV HTTP_ENABLE true
 ENV NETWORK_HOST _site_
+ENV HTTP_HOST _site_
 ENV HTTP_CORS_ENABLE true
 ENV HTTP_CORS_ALLOW_ORIGIN *
 ENV NUMBER_OF_MASTERS 1
