--- a/catalog/elk/docker/elasticsearch/Makefile
+++ b/catalog/elk/docker/elasticsearch/Makefile
@@ -4,7 +4,7 @@ clean:
 	@echo ""
 
 build:
-	docker build -t hbouvier/elasticsearch-kubernetes:5.2.0 .
+	docker build -t hbouvier/elasticsearch-kubernetes:5.2.0-001 .
 
 push:
-	docker push hbouvier/elasticsearch-kubernetes:5.2.0
+	docker push hbouvier/elasticsearch-kubernetes:5.2.0-001
