[gke] move more manifest to ansible

--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -3,3 +3,6 @@ mode: deploy
 kubernetes:
   root:
     path: "{{home}}/gcloud/{{project_name}}/{{cluster_name}}/"
+
+lego:
+  email: you@example.com
