--- a/catalog/couchdb/kubernetes/couchdb-statefulset.yaml
+++ b/catalog/couchdb/kubernetes/couchdb-statefulset.yaml
@@ -32,7 +32,7 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
       - name: couchdb
-        image: hbouvier/couchdb:2.0.0
+        image: hbouvier/couchdb:2.0.0-20170701
         imagePullPolicy: Always
         env:
         - name: ERL_FLAGS
@@ -57,7 +57,7 @@ spec:
         readinessProbe:
           httpGet:
             path: /_up
-            port: 5984
+            port: 3000
           initialDelaySeconds: 10
           timeoutSeconds: 3
           successThreshold: 1
@@ -65,7 +65,7 @@ spec:
         livenessProbe:
           httpGet:
             path: /_up
-            port: 5984
+            port: 3000
           initialDelaySeconds: 15
           timeoutSeconds: 3
           successThreshold: 1
@@ -76,7 +76,7 @@ spec:
         - mountPath: /opt/couchdb/etc/default.d
           name:  defaultd
       - name: couchdb-k8s-bootstrap
-        image: hbouvier/couchdb-bootstrap-kubernetes:2.0.0
+        image: hbouvier/couchdb-bootstrap-kubernetes:2.0.0-001
         imagePullPolicy: Always # IfNotPresent, Always, Never
         env:
         - name: NODE_ENV
