--- a/catalog/couchdb/docker/bootstrap-couchdb/bootstrap/package.json
+++ b/catalog/couchdb/docker/bootstrap-couchdb/bootstrap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "couchdb-k8s-bootstrap",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Bootstrap a Couchdb cluster",
   "main": "./bootstrap",
   "bin": {
@@ -22,6 +22,6 @@
     "mirv": "^0.0.7"
   },
   "engines": {
-    "node": "7.2.x"
+    "node": "8.1"
   }
 }
